syntax = "proto3";

package userspb;

option go_package = "./userspb";

service Users {
  rpc GetUsersInfo(GetUsersInfoRequest) returns (GetUsersInfoResponse);
}

message GetUsersInfoRequest {
  repeated string addresses = 1;
}

message UserInfo {
  string address = 1;
  string about = 2;
}

message GetUsersInfoResponse {
  repeated UserInfo list = 1;
}
